// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirect correctly 1`] = `
<div
  noThrow={true}
  to="/"
>
  Redirect - 
</div>
`;

exports[`renders correctly 1`] = `
<div
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    render - 
    <div
      className="Component-root-80"
    >
      <div
        className="Component-header-78"
      />
      <div
        className="Component-container-77"
      >
        <img
          className="Component-logoImage-79"
          src="/logo.png"
        />
        <div
          className="Component-caption-75"
        />
        <div
          className="Component-children-76"
        >
          <h5
            className="MuiTypography-root-31 MuiTypography-h5-47 MuiTypography-alignCenter-54 Component-pageTitle-74"
          >
            Create your account!
          </h5>
          <div
            renderButton={[Function]}
          >
            SignUp - 
            <button
              className="MuiButtonBase-root-28 MuiButton-root-2 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-raised-16 MuiButton-raisedPrimary-17 MuiButton-fullWidth-27"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              renderButton={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-3"
              >
                REGISTER
              </span>
              <span
                className="MuiTouchRipple-root-67"
              />
            </button>
            <div
              className="Component-links-1"
            >
              <div
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                to="/sign-in"
              >
                Link - 
                <span
                  className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorPrimary-61"
                >
                  Already have an account?
                </span>
              </div>
            </div>
          </div>
        </div>
        <p
          className="MuiTypography-root-31 MuiTypography-body1-40 MuiTypography-alignCenter-54"
        />
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
    <div
      noThrow={true}
      to="/"
    >
      Redirect - 
    </div>
  </div>
</div>
`;

exports[`renders the form correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root-28 MuiButton-root-2 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-raised-16 MuiButton-raisedPrimary-17 MuiButton-fullWidth-27"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      REGISTER
    </span>
    <span
      className="MuiTouchRipple-root-67"
    />
  </button>,
  <div
    className="Component-links-1"
  >
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/sign-in"
    >
      Link - 
      <span
        className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorPrimary-61"
      >
        Already have an account?
      </span>
    </div>
  </div>,
]
`;
